<resources>
    <string name="app_name">pokegroup</string>
    <string name="request_client_id">783762743706-l4embaje2pfh1i3u8tdgjb9n7m5ah6sn.apps.googleusercontent.com</string>

    <string name="facebook_app_id">1877661409030368</string>
    <string name="fb_login_protocol_scheme">fb1877661409030368</string>
    <string name="iniciar_sesi_n_con_google">Iniciar sesión con Google</string>
    <string name="iniciar_sesi_n_con_facebook">Iniciar sesión con Facebook</string>
    <string name="crea_tus_grupos_de_pokemon">Crea tus grupos de pokemon</string>
    <string name="estas_listo">Estas listo</string>
    <string name="pokegroup">PokeGroup</string>
    <string name="oscuro">Tema oscuro</string>
    <string name="claro">Tema normal</string>
    <string name="regiones_pokemon">Regiones pokemon</string>
    <string name="opciones">Opciones</string>
    <string name="menu">Menu</string>
    <string name="grupos">Grupos</string>
    <string name="pokemons">Pokemons</string>
    <string name="regiones">Regiones</string>
    <string name="hola">Hola</string>
    <string name="tema">Tema</string>
    <string name="no_posees_conexi_n">No posees conexión</string>
    <string name="tu_conexi_n">Tu conexión a internet es debil, o no tienes conexión. verifica tu conexion e intenta
        nuevamente
    </string>
    <string name="continuar">Continuar</string>
    <string name="regresar">Regresar</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="pokemons_de_la_region">Pokemons de la Region</string>
    <string name="no_existen_datos_de_esta_region">No existen datos de esta Region</string>
    <string name="pokedex">Pokedex</string>
    <string name="pokemon_all">Todos los pokemon</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="help1">Menu de cambios de temas de la app y opcion de mostrar todos los pokemos existentes o grupos
        creados
    </string>
    <string name="help2">Puedes seleccionar regiones y ver los pokemon por cada region</string>
    <string name="help3">Puedes revisar tu perfil y \ncerrar tu sesión</string>
    <string name="agregar_a_grupo">AGREGAR A\nGRUPO POKEMON</string>
    <string name="info">Informacion de pokedex</string>
    <string name="remover">REMOVER DE\nGRUPO POKEMON</string>
    <string name="crear_grupo_pokemon">Crear grupo pokemon</string>
    <string name="agrega_un_nombre_a_este_grupo">Agrega un nombre a este grupo</string>
    <string name="ingrese_un_nombre">Ingrese un nombre</string>
    <string name="grupos_pokemon">Grupos Pokemon</string>
    <string name="grupos_creados">Grupos creados</string>
    <string name="nombre">nombre</string>
    <string name="sin_grupos">Sin grupos</string>
    <string name="actu_grupo">Actualizar grupo</string>

    <string name="config_host" translatable="false">www.pokegro.com</string>
    <string name="config_path_salads" translatable="false">data</string>
    <string name="config_scheme" translatable="false">http</string>
    <string name="invite">Revisa mi Grupo Pokemon</string>
    <string name="copiar_grupo">Puedes copiar mi grupo pokemon</string>
    <string name="migrupo">Mi grupo pokemon</string>
    <string name="server_deep">https://pokegro.com/</string>
    <string name="urlImg">
        http://pngriver.com/wp-content/uploads/2018/03/Download-Pokeball-PNG-Image-For-Designing-Purpose.png
    </string>
</resources>
