<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mainrr"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
    android:background="@color/transparent">

	<RelativeLayout
		android:id="@+id/LinearPrincipal"
		android:background="@drawable/dialogbg"
		android:layout_width="@dimen/_231sdp"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:layout_height="wrap_content" >
		<ImageView
			android:layout_width="@dimen/_70sdp"
			android:layout_height="@dimen/_120sdp"
			android:layout_marginTop="@dimen/_10sdp"
			android:scaleType="centerInside"
			android:layout_alignParentRight="true"
			android:src="@drawable/ic_pokeball"/>
	<LinearLayout
		android:gravity="center"
		android:layout_width="@dimen/_231sdp"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:orientation="vertical"
		android:layout_height="wrap_content">
		<TextView
			android:id="@+id/mensaje_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textColor="@color/text"
			android:layout_marginTop="@dimen/_10sdp"
			android:textSize="@dimen/_12sdp"
			android:layout_marginBottom="@dimen/_10sdp"
			android:text="@string/agrega_un_nombre_a_este_grupo"
			tools:ignore="SpUsage"/>
		<EditText
			android:id="@+id/name"
			android:layout_width="@dimen/_130sdp"
			android:layout_height="@dimen/_35sdp"
			android:gravity="center"
			android:singleLine="true"
			android:background="@drawable/fondo_btn_login"
			android:textColor="@color/redball"
			android:layout_marginTop="@dimen/_10sdp"
			android:textSize="@dimen/_12sdp"
			android:hint="@string/ingrese_un_nombre"
			tools:ignore="SpUsage"/>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/_10sdp">
			<Button
				android:id="@+id/btnSi"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@android:color/transparent"
				android:textSize="@dimen/_13sdp"
				android:textColor="@color/redball"
				android:text="@string/continuar"
				tools:ignore="SpUsage"/>
		</LinearLayout>
	</LinearLayout>

	</RelativeLayout>


</RelativeLayout>


