<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:indefinite_pager_indicator="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fondoHome"
        tools:context=".Views.HomeActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:gravity="bottom|left"
            android:orientation="horizontal"
            android:id="@+id/linearLayout">
        <ImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:scaleType="centerCrop"/>
        <TextView
                android:id="@+id/textEventos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hola"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/negro"
                android:textSize="@dimen/_20sdp"
        />
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:id="@+id/textView"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="@dimen/_15sdp"
            android:id="@+id/linearLayout2">
        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="wrap_content">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/FloatingMyLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/green"
                    app:srcCompat="@drawable/ic_brightness_2_black_24dp"
                    app:fabCustomSize="@dimen/_35sdp"
                    app:fabSize="auto"
                    app:maxImageSize="@dimen/_20sdp"
            />
            <TextView
                    android:id="@+id/textMenu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13sdp"
                    android:paddingBottom="@dimen/_3sdp"
                    android:text="@string/tema"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="wrap_content">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/FloatingPokemon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/purple"
                    app:srcCompat="@drawable/ic_poke_ico"
                    app:fabCustomSize="@dimen/_35sdp"
                    app:fabSize="auto"
                    app:maxImageSize="@dimen/_20sdp"
            />
            <TextView
                    android:id="@+id/textMenu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/_3sdp"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/pokemons"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/FloatingGroups"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/blue"
                    app:srcCompat="@drawable/ic_pokeballs"
                    app:fabCustomSize="@dimen/_35sdp"
                    app:fabSize="auto"
                    app:maxImageSize="@dimen/_20sdp"
            />
            <TextView
                    android:id="@+id/textMenu3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/_3sdp"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/grupos"/>
        </LinearLayout>


    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regiones_pokemon"
            android:id="@+id/textRegiones"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:layout_marginTop="@dimen/_25sdp"/>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/view_pager1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="@dimen/_42sdp"
            android:paddingEnd="@dimen/_42sdp"
            android:clipToPadding="false"
            android:scrollbarSize="@dimen/_3sdp"
            android:scrollbarThumbHorizontal="@color/colorAccent"
            android:scrollbars="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textRegiones"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/_8sdp"
            tools:listitem="@layout/item_regiones"/>
    <LinearLayout
            android:id="@+id/linHelp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:visibility="gone"
            android:background="@color/trasparent_help"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
    >
        <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/top_layout">

            <ImageView
                    android:id="@+id/ivInstruction"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/_85sdp"
                    android:clickable="false"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/hand_help"/>
            <ImageView
                    android:id="@+id/ivInstruction1"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/_125sdp"
                    android:clickable="false"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/hand_help"/>
            <ImageView
                    android:id="@+id/ivInstruction2"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/_65sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:clickable="false"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/hand_help"/>
            <TextView
                    android:id="@+id/txthelp1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:textSize="@dimen/_13sdp"
                    android:gravity="center"
                    android:layout_below="@+id/ivInstruction1"
                    android:text="@string/help1"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:textColor="@color/blanco"
                    android:shadowColor="@color/trasparent_help"
            />
            <TextView
                    android:id="@+id/txthelp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="@dimen/_68sdp"
                    android:layout_marginStart="@dimen/_60sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:textSize="@dimen/_13sdp"
                    android:gravity="center"
                    android:text="@string/help3"
                    android:textColor="@color/blanco"
                    android:shadowColor="@color/trasparent_help"
            />

            <TextView
                    android:id="@+id/txthelp3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/_13sdp"
                    android:gravity="center"
                    android:layout_alignParentBottom="true"
                    android:textColor="@color/blanco"
                    android:layout_margin="@dimen/_30sdp"
                    android:shadowColor="@color/trasparent_help"
                    android:text="@string/help2"
                    android:shadowDx="-1"
                    android:shadowDy="-1"
                    android:shadowRadius="1"
            />
            <ImageButton
                    android:id="@+id/close"
                    android:layout_width="@dimen/spacing_xxlarge"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/shape_moon"/>
        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>