<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Views.SplashScreen">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" android:id="@+id/linearLayout">
        <ImageView
                android:id="@+id/ivSplash"
                android:layout_width="match_parent"
                android:background="@color/blanco"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
        <ImageView
                android:id="@+id/ivSplashBottom"
                android:layout_width="match_parent"
                android:background="@color/redball"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
    </LinearLayout>
    <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:scaleType="centerCrop"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_pokeball"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="100dp"
            android:text="@string/pokegroup"
            android:textColor="@color/redball"
            android:textSize="44sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <TextView
            android:id="@+id/ivSubtitle"
            android:lineSpacingExtra="8dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            android:text="@string/crea_tus_grupos_de_pokemon"
            android:textColor="@color/redball"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <TextView
            android:id="@+id/ivBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="108dp"
            android:layout_marginStart="36dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/estas_listo"
            android:textColor="#FFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginBottom="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:theme="@style/RedAccent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:indeterminateOnly="true"
            android:max="100"
            android:progress="45"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>